ui for login and sign up is done
created orignal ui for this project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="txt_register_header">Create New Account</string>
     <string name="txt_register_subheader">Please provide all the required information</string>
     <string name="txt_username">Username</string>
-    <string name="txt_username_hint">cheezycode</string>
+    <string name="txt_username_hint">Senpai</string>
     <string name="txt_email">Email</string>
-    <string name="txt_email_hint">cheezycode@gmail.com</string>
+    <string name="txt_email_hint">senpai@gmail.com</string>
     <string name="txt_password">Password</string>
     <string name="txt_password_hint">........</string>
     <string name="txt_sign_up">Sign Up</string>
